use own adaptivelearnr package; fixes #7

--- a/testgenauigkeit.Rmd
+++ b/testgenauigkeit.Rmd
@@ -5,8 +5,7 @@ author: Markus Konrad
 email: markus.konrad@htw-berlin.de
 date: "`r format(Sys.time(), '%d.%m.%Y')`"
 output:
-    learnr::tutorial:
-        css: "www/tutorial.css"
+    adaptivelearnr::tutorial
 ---
 
 ```{r setup, include=FALSE}
@@ -27,13 +26,6 @@ sens <- 0.97    # P(T|K)
 spec <- 0.997   # P(¬T|¬K)
 pos_pred_val <- sens * prevalence / (sens * prevalence + (1-spec) * (1-prevalence))   # P(K|T)
 ```
-
-```{r setup_js, echo=FALSE}
-htmltools::tagList(
-    htmltools::tags$script(src = "www/tutorial.js")
-)
-```
-
 
 ## Fragestellung
 
@@ -492,8 +484,6 @@ grade_this_code()
 ```
 
 
-<!--
 ## Wie zuverlässig sind mehrere Tests?
 
-- Szenarios: Schnelltest + Schnelltest, Schnelltest + PCR
--->
+TODO
