--- a/testgenauigkeit.Rmd
+++ b/testgenauigkeit.Rmd
@@ -538,3 +538,16 @@ grade_this_code()
 ## Wie zuverlässig sind mehrere Tests?
 
 TODO
+
+```{r}
+checkboxInput("checkbox_input_test", "checkbox input test")
+dateInput("date_input_test", "date input test")
+dateRangeInput("date_range_input_test", "date range input test")
+numericInput("numeric_input_test", "num. input test", 0)
+radioButtons("radio_buttons_test", "radio buttons test", c("foo", "bar"))
+selectInput("select_input_test", "select input test", c("foo", "bar"))
+sliderInput("slider_input_test", "slider input test", 1, 10, 5, step = 1)
+textInput("text_input_test", "text input test")
+textAreaInput("text_input_test", "text area input test")
+```
+
